--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -9,6 +9,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "uuid": "^9.0.1"
   }
 }
