--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
@@ -11,5 +12,8 @@
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.3",
     "uuid": "^9.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon app.js"
   }
 }
