--- a/frontEnd/frontend/package.json
+++ b/frontEnd/frontend/package.json
@@ -10,11 +10,15 @@
     "bootstrap": "^5.3.3",
     "botstrap": "^0.20.1",
     "next": "^14.2.4",
+    "openai": "^4.103.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-text-mask": "^5.5.0",
+    "text-mask-addons": "^3.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
